fixed meta data and improve sidebar view on smaller screens

--- a/front_end/css/less/layout.less
+++ b/front_end/css/less/layout.less
@@ -7,6 +7,15 @@
  layout
  ========================================================================== */
 
+.main,
+.main-content,
+.secondary,
+.secondary-content {
+    -webkit-box-sizing: border-box;
+    -moz-box-sizing: border-box;
+    box-sizing: border-box;
+}
+
 .wrap {
     position: relative;
     max-width: 60em; /* 960 / 16 = 60*/
