--- a/front_end/css/less/module/sidebar.less
+++ b/front_end/css/less/module/sidebar.less
@@ -64,15 +64,19 @@
     }
 }
 
-.open-definition {
+.open-definition, .regs-meta {
     position: fixed;
-    top: 100px;
     padding: 0 0 2.5em 0;
     width: 271px;
     line-height: 1.5714;
     max-height: 80%; 
     overflow-y: auto;
 }
+
+.open-definition {
+    top: 100px;
+}
+
 
 .continue-link:last-child {
     margin-bottom: 100px;
